manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-service
  template:
    metadata:
      labels:
        app: customer-service
    spec:
      containers:
      - image: bikepack.azurecr.io/bikepack/customer-service:latest
        name: customer
        resources:
          requests:
            cpu: '0'
            memory: '0'
          limits:
            cpu: '256'
            memory: 11400G
        ports:
        - containerPort: 1234
          protocol: TCP
        volumeMounts:
          - mountPath: "/mnt/secrets-store"
            name: secrets-store01
            readOnly: true
        readinessProbe:
          httpGet:
            path: /health
            port: 1234
          periodSeconds: 30
          timeoutSeconds: 30
        livenessProbe:
          httpGet:
            path: /health
            port: 1234
          periodSeconds: 30
          timeoutSeconds: 30
      volumes:
      - name: secrets-store01
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: azure-sync
