manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "bikepackk8s-1b06"
    labels:
        app: "bikepackk8s-1b06"
spec:
    type: LoadBalancer
    ports:
    - port: 1234
      targetPort: 1234
      protocol: TCP
      name: http
    selector:
        app: "bikepackk8s-1b06"
